syntax = "proto3";

package pg.service.user;

option go_package = "proto/user";

service UserService {
  rpc GetByID (GetByIDRequest) returns (GetByIDResponse){}
  rpc Create (CreateRequest) returns (CreateResponse){}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  //	rpc delete(UserRequest) returns (UserResponse) {}
}

message User{
  uint64 id = 1;
  string password = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  string real_name = 6;
  string avatar = 7;
  uint32 status = 8;
  string create_at = 9;
  string update_at = 10;
}

message GetByIDRequest{
  uint64 id = 1;
}

message GetByIDResponse{
  User user = 1;
}

message CreateRequest{
  string password = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string real_name = 5;
  string avatar = 6;
}

message CreateResponse{
  User user = 1;
}

message UpdateRequest{
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string real_name = 5;
  string avatar = 6;
}

message UpdateResponse{
  User user = 1;
}
